Init java 1.8 commit